<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="titulo_aplicacion">Asteroides</string>
    <string name="menu_settings">Settings</string>
	<string name="arrancar">Inicio</string>
	<string name="configuraciones">Configuraciones</string>
	<string name="acerca_de">Acerca de</string>
	<string name="salir">Salir</string>
	<string name="acerca_de_string">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
	<string name="acerca_de_titulo">Acerca de ...</string>
	<string name="puntuaciones">Puntuaciones</string>
	
</resources>